<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="50dp"
    android:layout_height="290dp">
    <Button
        android:id="@+id/menu_bt"
        android:layout_centerVertical="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/bt_bg"
        android:textSize="8dp"
        android:textStyle="bold"
        android:text="@string/script_menu"/>
    <LinearLayout
        android:id="@+id/function"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">
        <Button
            android:id="@+id/start_bt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bt_bg"
            android:textSize="8dp"
            android:textStyle="bold"
            android:text="@string/script_start"/>
        <Button
            android:id="@+id/pause_bt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bt_bg"
            android:textSize="8dp"
            android:textStyle="bold"
            android:text="@string/script_pause"/>
        <Button
            android:id="@+id/stop_bt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bt_bg"
            android:textSize="8dp"
            android:textStyle="bold"
            android:text="@string/script_stop"/>
        <Button
            android:id="@+id/setting_bt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bt_bg"
            android:textSize="8dp"
            android:textStyle="bold"
            android:text="@string/script_setting"/>
        <Button
            android:id="@+id/close_bt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bt_bg"
            android:textSize="8dp"
            android:textStyle="bold"
            android:text="@string/script_close"/>
    </LinearLayout>
</RelativeLayout>